# stratum

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  eval.yml
config/: eval_thresholds.yaml
data/golden/: qa_pairs.jsonl
docs/: architecture.md  evaluation.md
src/rag/: __init__.py  config.py  exceptions.py  pipeline.py  tracing.py
src/rag/api/: __init__.py  main.py
src/rag/evaluation/: __init__.py  deepeval_runner.py  ragas.py
src/rag/generation/: __init__.py  generator.py
src/rag/ingestion/: __init__.py  chunker.py  embedder.py  loaders.py
src/rag/interfaces/: __init__.py  embedder.py  generator.py  retriever.py  store.py
src/rag/retrieval/: __init__.py  hybrid.py
src/rag/scripts/: __init__.py  ingest.py
src/rag/store/: __init__.py  chroma.py  factory.py  weaviate.py
terraform/: README.md  alb.tf  ec2.tf  iam.tf  main.tf  outputs.tf  s3.tf  security_groups.tf  terraform.tfvars.example  variables.tf  vpc.tf
terraform/user_data/: api.sh  weaviate.sh
tests/: conftest.py
tests/e2e/: test_eval.py  test_ragas_eval.py
tests/integration/: test_store.py
tests/unit/: test_chunker.py  test_citation_parser.py  test_deepeval_runner.py  test_embedder.py  test_exceptions.py  test_factory.py  test_hybrid.py  test_loaders.py  test_pipeline.py  test_rrf_fusion.py  test_tracing.py
