[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stratum"
version = "0.1.0"
description = "Domain-specific RAG engine with hybrid retrieval, cross-encoder re-ranking, and citation-grounded generation"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  # Vector stores
  "chromadb>=0.5.0",             # default backend — zero infrastructure
  "weaviate-client>=4.5.0",      # production backend — opt-in via STRATUM_STORE_BACKEND=weaviate

  # Embeddings — OpenAI is the default (no GPU, no large download)
  "anthropic>=0.30.0",
  "openai>=1.30.0",
  "numpy>=1.26.0",

  # Retrieval
  "rank-bm25>=0.2.2",
  "sentence-transformers>=2.7.0", # cross-encoder reranker (always required, ~180MB)

  # Document loading
  "pypdf>=4.0.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "python-docx>=1.1.0",

  # Config / logging
  "pydantic-settings>=2.3.0",
  "structlog>=24.1.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
# Heavy local embeddings — opt-in only (requires GPU recommended, ~2GB download)
local-embed = [
  "torch>=2.2.0",
]
# Eval — DeepEval (primary) + RAGAS (opt-in legacy). Both LLM-evaluated.
eval = [
  "deepeval>=1.4.0",       # primary eval framework — pytest-native, local judge support
  "ollama>=0.3.0",         # client for local Ollama judge — zero API cost
  "pandas>=2.2.0",
]
api = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
]
observability = [
  "langfuse>=2.0.0",
]
ui = [
  "streamlit>=1.35.0",
]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.10.0",
  "ruff>=0.15.0",
  "pre-commit>=3.7.0",
  "stratum[eval]",
  "stratum[api]",
]

[project.scripts]
stratum-ingest = "rag.scripts.ingest:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["rag"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rag.api.main"
# FastAPI decorators are dynamically typed; suppressing the resulting
# "untyped decorator" noise without relying on version-sensitive type: ignore comments.
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/rag --cov-report=term-missing --no-cov-on-fail"
markers = [
  "integration: requires live infrastructure (Chroma runs in CI; Weaviate requires Docker)",
  "e2e: requires STRATUM_ANTHROPIC_API_KEY and eval dependencies",
  "slow: marks tests as slow (deselect with -m 'not slow')",
]

[tool.coverage.run]
omit = [
  # Requires live Weaviate — covered by integration tests when Docker is available
  "src/rag/store/weaviate.py",
  # FastAPI app — covered by e2e tests
  "src/rag/api/main.py",
  # Eval harness — e2e only, requires golden dataset and judge model
  "src/rag/evaluation/deepeval_runner.py",
  # CLI entry point — integration-level, orchestrates all components
  "src/rag/scripts/ingest.py",
]

[tool.coverage.report]
fail_under = 80
